--- a/css/nav.css
+++ b/css/nav.css
@@ -176,7 +176,7 @@
     flex-direction: column;
     /* top: 5.615rem; */
     opacity: 0;
-    top: -17rem;
+    /* top: -17rem; */
     z-index: 2;
     /* transition: 0.3s ease-in-out; */
     transition: top 0.5s ease-in-out;
@@ -189,12 +189,13 @@
   }
   .nav .links#part2{
     visibility: hidden;
+    transition: opacity 1s ease-in-out, visibility 1.2s ease-in-out;
   }
   .nav .links#part2.linksPos2{
     visibility: visible;
     top: 9rem;
     opacity: 1;
-    transition: opacity 1s ease-in-out;
+    transition: opacity 1s ease-in-out, visibility 1.2s ease-in-out;
   }
 
   .nav .links-bg {
